added check auth
